<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppThemeCompact"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myToolbar">

        <ImageView
            android:id="@+id/imagesUpImage"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/images_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/images" />

        <TextView
            android:id="@+id/imagesTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/images"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagesUpImage"
            tools:text="IMAGES" />

        <ImageView
            android:id="@+id/cutsheetsUpmage"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cutsheets_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagesTv"
            app:srcCompat="@drawable/cutsheets" />

        <TextView
            android:id="@+id/cutsheetsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cutsheets"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cutsheetsUpmage"
            tools:text="CUTSHEETS" />

        <ImageView
            android:id="@+id/pointsUpImage"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/point_files_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cutsheetsTv"
            app:srcCompat="@drawable/points" />

        <TextView
            android:id="@+id/pointsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pointsUpImage"
            tools:text="POINTS" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>