<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppThemeCompact"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myToolbar">

        <ImageView
            android:id="@+id/upImage"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/up_image"
            android:minHeight="100dp"
            android:minWidth="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/up_arrow" />

        <TextView
            android:id="@+id/uploadTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upImage"
            tools:text="UPLOAD" />

        <ImageView
            android:id="@+id/downImage"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/down_image"
            android:minHeight="100dp"
            android:minWidth="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uploadTv"
            app:srcCompat="@drawable/down_arrow" />

        <TextView
            android:id="@+id/downloadTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/downImage"
            tools:text="DOWNLOAD" />

        <ImageView
            android:id="@+id/scannedImage"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/scanned_image"
            android:minHeight="100dp"
            android:minWidth="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/downloadTv"
            app:srcCompat="@drawable/scanned" />

        <TextView
            android:id="@+id/scannedTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scanned"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scannedImage"
            tools:text="SCANNED" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>