<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/dummy"
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" />

    <ScrollView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354"
        app:layout_constraintWidth_percent="75">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/usernameText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="45dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/username_textfield"
                android:inputType="textPersonName"
                android:nextFocusDown="@id/passwordText"
                android:nextFocusForward="@id/passwordText"
                android:nextFocusLeft="@id/usernameText"
                android:nextFocusUp="@id/usernameText"
                android:textColorLink="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/candvImage" />

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="45dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/password_textfield"
                android:inputType="textPassword"
                android:nextFocusDown="@id/loginButton"
                android:nextFocusForward="@id/loginButton"
                android:nextFocusLeft="@id/usernameText"
                android:nextFocusUp="@id/usernameText"
                android:textColorLink="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameText" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="45dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="20dp"
                android:text="@string/login_button"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordText" />

            <ImageView
                android:id="@+id/candvImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="45dp"
                android:layout_marginStart="45dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/candv_logo"
                android:cropToPadding="false"
                android:minHeight="100dp"
                android:minWidth="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>